@@ -3,7 +3,7 @@
 import sys
 import os
 
-sys.path.insert(0,"@DATADIR@/@PACKAGE_NAME@")
+sys.path.insert(0,"@SYNCEDATADIR@")
 import synceconnector
 from synceconnector import rndis_static_config, rndis_dhcp_config, rndis_dhcp_unconfig, run_dccm, process_config, get_logger
 
